FIX - Send message once + 1st message not showing at creation

--- a/front/src/components/Chat/chatStyles.scss
+++ b/front/src/components/Chat/chatStyles.scss
@@ -19,7 +19,7 @@
     color: vars.$primary-color !important;
     font-size: 1.3rem !important;
     text-align: left;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
 
   &-opportunity {
